src/test/ui/nll/mir_check_cast_unsafe_fn.stderr
warning: not reporting region error due to nll
  --> $DIR/mir_check_cast_unsafe_fn.rs:8:32
   |
LL |     let g: unsafe fn(_) -> _ = f;
   |                                ^

error: unsatisfied lifetime constraints
  --> $DIR/mir_check_cast_unsafe_fn.rs:10:14
   |
LL | fn bar<'a>(input: &'a u32, f: fn(&'a u32) -> &'a u32) -> &'static u32 {
   |        -- lifetime `'a` defined here
...
LL |     unsafe { g(input) }
   |              ^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to previous error

